# portslayer

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
packaging/homebrew/: README.md  portslayer.rb
packaging/npm/: README.md  package.json
packaging/npm/scripts/: find-python.js  postinstall.js
packaging/scoop/: README.md  portslayer.json
portslayer/: __init__.py  cli.py  tui.py
portslayer/core/: __init__.py  models.py  port_scanner.py  process_killer.py
portslayer/utils/: __init__.py  platform_utils.py  validators.py
tests/: test_port_scanner.py  test_process_killer.py  test_validators.py
